# mcp-browser-use

./: .gitignore  README.md  pyproject.toml
src/mcp_server_browser_use/: __init__.py  cli.py  config.py  llm_openai_compat.py  providers.py  server.py
src/mcp_server_browser_use/observability/: store.py
src/mcp_server_browser_use/research/: machine.py
tests/: test_config.py  test_dashboard_api.py  test_dashboard_integration.py  test_llm_openai_compat.py  test_mcp_tools.py  test_observability.py  test_providers.py  test_research_machine.py
